[package]
name = "nm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.0"
axum-macros = "*"
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
rtnetlink = "*"
futures = "*"
log = "*"
thiserror = "*"
tower-http = { version = "0.3.5", features = ["cors"] }
surge-ping = "0.7.3"
